--- a/css/style.css
+++ b/css/style.css
@@ -267,90 +267,127 @@ textarea.itl  {
 
 
 *,*::before,*::after{box-sizing:border-box;}
-*{margin:0px; padding:0px;}
+*{margin:0px;padding:0px;}
  article, aside, figcaption, figure, footer, header, hgroup, main, nav, section{display:block;}
-body{font-family: 'CalibriRegular', sans-serif ;font-size:14px;font-weight:normal; line-height:1.5;color:#000; background:#f2f2f2; }  
-a{ text-decoration:none; color: #7F7F7F;}
-ul{  list-style-type:none; display:inline-block;}
-ul li{  list-style-type:none; display:inline-block;}
-.clear{ clear:both;}
-
-.navbar{ position:fixed; background:#fff ; width:100%; z-index:999;   padding:11px 5px 5px 5px; overflow:hidden; box-shadow: 0px 1px 5px #00000033;}
-.menutoggle{ float:left; padding:9px 15px;}
-.navbar-brand{ float:left; padding:10px 15px; }
-
-.navbar-nav ul{ float:left; list-style-type:none;  margin:7px 10px 0px 20px;}
-.navbar-nav ul li{   list-style-type:none; display:inline-block; padding:0px 5px;}
-.navbar-nav ul li img{ float:left; padding:3px 5px;}
-.navbar-nav ul li a{color:#7F7F7F; text-decoration:none; line-height:22px; font-size:15px; }
+body{font-family:'CalibriRegular', sans-serif;font-size:14px;font-weight:normal;line-height:20px;color:#000;background:#f2f2f2;}
+ a{text-decoration:none;color:#7F7F7F;}
+ul{list-style-type:none;display:inline-block;}
+ul li{list-style-type:none;display:inline-block;}
+hr{ border: 1px solid #DBDBDB; margin:10px 0px}
+img{ max-width:100%;}
+.clear{clear:both;}
+.bgwhite{  background:#fff;}
+.navbar{position:fixed;background:#fff;width:100%;z-index:9;padding:11px 5px 5px 5px;overflow:hidden;box-shadow:0px 1px 5px #00000033;}
+.menutoggle{float:left;padding:9px 15px;}
+.navbar-brand{float:left;padding:10px 15px;}
+.navbar-nav ul{float:left;list-style-type:none;margin:7px 10px 0px 20px;}
+.navbar-nav ul li{list-style-type:none;display:inline-block;padding:0px 5px;}
+.navbar-nav ul li img{ padding:0px 5px; margin:0px 0px -3px 0px;}
+.navbar-nav ul li a{color:#7F7F7F;text-decoration:none;line-height:22px;font-size:15px; padding-bottom: 20px;}
+.navbar-nav ul li.active a{color:#0198DB ; border-bottom: 2px solid  #0198DB;}
+ .searchbar{width:500px;float:right;}
+.searchbar select{float:left;width:20%;padding:10px 8px;background:#fefef6;border: 1px solid grey;}
+.searchbar input[type=text]{padding:11px;border:1px solid grey;border-left:1px solid #fcfcfc;border-right:1px solid #fcfcfc;float:left;width:70%;background:#fcfcfc;}
+.searchbar button{float:left;width:10%;padding:8px;background:#fcfcfc;border:1px solid grey;border-left:none;cursor:pointer;}
+ .notification{float:right;margin:8px 20px;padding:3px 20px;position:relative;border-right:1px solid #ccc;}
+ .notification span{width:16px;height:16px;font-size:8px;text-align:center;line-height:13px;top:-6px;right:16px;border-radius:20px;position:absolute;border:solid 2px #fff;background:#ffc068;}
+ .profile{float:right;padding:0px 20px 0px 0px;}
+ .profileimg{float:left;margin-right:10px;}
+ .profilename{float:left;margin-right:20px;}
+ .profilename p{font-size:13px;line-height:15px;color:#979797;margin-top:4px;}
+ .profilename p span{font-size:14px;font-weight:600;line-height:18px;color:#4D4F5C;}
+ .profilename p span:before{content:"";position:absolute;top:30px;right:20px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#000 #000 transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
+.container{width:1024px;margin:0px auto;padding:15px 0px 0px 0px;}
+#content{padding-top:60px;}
+.content_left{width:70%;float:left;}
+.content_left h2{padding:0px;font-size:24px;font-weight:normal;line-height:22px;}
+.content_left h4{padding:10px 0px;font-size:17px;font-weight:normal;}
+.breadcrumb ul{list-style-type:none;}
+ .breadcrumb ul li{display:inline-block;margin-right:7px;font-size:12px;}
+.filter ul li{background:#fff;padding:2px 25px 0px 8px;margin:2px;position:relative;box-shadow:0px 5px 35px #00000008;border:1px solid #CBC1B6;}
+.filter ul li.one{background:none;border:none;padding:2px;}
+ .filter ul li a:before{content:"";position:absolute;top:6px;right:8px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#000 #000 transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
+.filter ul li.active{border:1px solid #3486ab;color:#3486ab;background:#ecf9ff;}
+.filter ul li.active a{color:#3486ab;}
+ .filter ul li.active a:before{content:"";position:absolute;top:6px;right:8px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#3486ab #3486ab transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
+.card-body{background:#fff;padding:15px;overflow:hidden;margin:15px 0px;box-shadow:-10px 5px 10px #8098D512;}
+.Reports_img{width:170px;float:left;margin-right:10px;}
+.Reports_text{width:460px;float:left;}
+.Reports_text h4{padding:0px;font-weight:normal;font-size:20px;line-height:22px;}
+ .leftside{float:left;}
+ ul.Posteddate li{font-size:12px;color:#7F7F7F;border-right:1px solid #7F7F7F;padding:0px 5px;line-height:13px;}
+  ul.Posteddate li span{ color:#158CD1;}
+ ul.Posteddate li.first{padding:0px 5px 0px 0px}
+ ul.Posteddate li.last{border:none;}
+ ul.views li{line-height:12px;color:#7F7F7F;}
+   ul.views li span{ color:#158CD1;}
+ ul.views li img{float:left;margin-right:5px;}
+.Reports_text p{line-height:18px;margin:6px 0px;}
+.download{text-align:right;}
+.download ul li{padding:3px;}
+.thumbnail{text-align:right;}
+.thumbnail ul li{padding:5px;}
+.content_right{width:27%;float:right;}
+.content_right h4{font-size:16px;font-weight:normal;}
+.content_right h5{font-size:16px;font-weight:normal;margin:15px 0px;}
+.rightcard{background:#fff;margin:15px 0px 0px 0px;box-shadow:-5px 4px 10px #2A6E9512;min-height:420px;}
+.cardpage{margin:0px 15px;overflow:hidden;border-bottom:1px solid #eee;padding:12px 0px;}
+.pagenoleft{float:left;}
+.pagenoright{margin-left:45px;}
+.pagenoright h6{font-weight:normal;font-size:13px;line-height:14px;}
+.pagenoright p{font-size:11px;color:#7F7F7F}
+.Merge{background:#F9F9F9;padding:12px;text-align:center;box-shadow:-5px 4px 10px #2A6E9512;}
+.Merge h5{margin:0px;padding:0px;}
+.Merge h5 a{background:#0198DB;padding:6px 30px;font-size:12px;text-align:center;color:#fff;}
+.events{background:#fff;overflow:hidden;box-shadow:-10px 4px 10px #2A6E9512;}
+.cardevent{padding:10px;border-bottom:1px solid #eee;overflow:hidden;}
+.eventsleft{float:left;}
+.eventsright{margin-left:105px;}
+.eventsright h6{font-weight:normal;font-size:13px;line-height:14px;margin-bottom:6px;}
+.eventsright p{font-size:11px;color:#989898}
+ #sidebar{width:210px;position:fixed;top:0;left:-220px;height:100vh;z-index:999;background:#fff;color:#2A2A2A;transition:all 0.3s;overflow-y:scroll;box-shadow:3px 3px 3px rgba(0, 0, 0, 0.2);}
+#sidebar.active{left:0;}
+#dismiss{width:35px;height:35px;line-height:35px;text-align:center;position:absolute;top:10px;right:10px;cursor:pointer;-webkit-transition:all 0.3s;-o-transition:all 0.3s;transition:all 0.3s;}
  
-.searchbar{ width:500px; float:right;}
-.searchbar select  { float:left;  width: 20%; padding:10px 8px; background:#fefef6}
-.searchbar input[type=text] { padding: 11px;  border: 1px solid grey;  border-left: 1px solid #fcfcfc;   border-right: 1px solid #fcfcfc;  float: left;
-  width: 70%;  background: #fcfcfc ;}
-.searchbar button { float: left;  width: 10%;  padding:8px; background: #fcfcfc ;  border: 1px solid grey;  border-left: none;  cursor: pointer;}
- .notification{ float:right; margin:8px 20px; padding:3px 20px;  position:relative;    border-right: 1px solid #ccc;}
- .notification span{width:16px; height:16px; font-size:8px; text-align:center; line-height:13px; top: -6px;  right: 16px;   border-radius: 20px;    position: absolute; border:solid 2px #fff;   background: #ffc068;}
- .profile{ float:right; padding:0px 20px 0px 0px;}
- .profileimg{ float:left; margin-right:10px;}
- .profilename { float:left; margin-right:20px;}
-  .profilename p{ font-size:13px; line-height:15px; color:#979797; margin-top:4px;}
-   .profilename p span{ font-size:14px;  font-weight:600; line-height:18px; color:#4D4F5C; }
-   .profilename p span:before {  content: "";  position: absolute;  top: 30px;  right: 20px; width: 8px; height: 8px; border-style: solid; border-width: 1px;
-    border-color: #000 #000 transparent transparent;  -webkit-transform: rotate(45deg);  transform: rotate(135deg);   -webkit-transition: all .25s ease;   }
-
-.container{width:1024px; margin:0px auto; padding:15px 0px 0px 0px; }
-#content{ padding-top:60px;}
-.content_left{ width:70%; float:left;}
-.content_left h2{ padding:0px; font-size:24px; font-weight:normal; line-height: 22px;}
-.content_left h4{ padding:10px 0px; font-size:17px; font-weight:normal;}
-.breadcrumb ul{  list-style-type:none;}
- .breadcrumb ul li{ display:inline-block; margin-right:7px;     font-size: 12px;}
-.filter ul li{ background:#fff; padding:2px 25px 0px 8px; margin:2px; position:relative; box-shadow: 0px 5px 35px #00000008;  border: 1px solid #CBC1B6; }
-.filter ul li.one{ background:none; border:none; padding:2px;}
- .filter ul li a:before {  content: "";  position: absolute;  top:  6px;  right: 8px; width: 8px; height: 8px; border-style: solid; border-width: 1px;
-    border-color: #000 #000 transparent transparent;  -webkit-transform: rotate(45deg);  transform: rotate(135deg);  -webkit-transition: all .25s ease;   }
-.filter ul li.active{ border: 1px solid #3486ab ; color:#3486ab; background:#ecf9ff;}
-.filter ul li.active a{  color:#3486ab;}
- .filter ul li.active a:before {  content: "";  position: absolute;  top:  6px;  right: 8px; width: 8px; height: 8px; border-style: solid; border-width: 1px;
-    border-color: #3486ab #3486ab transparent transparent;  -webkit-transform: rotate(45deg);  transform: rotate(135deg);  -webkit-transition: all .25s ease;   }
-.card-body{ background:#fff; padding:14px 13px 14px 14px; overflow:hidden; margin:15px 0px; box-shadow: -10px 5px 10px #8098D512;}	
-.Reports_img { width:170px; float:left; margin-right:10px;}
-.Reports_text{ width: 460px; float: left; }
-.Reports_text h4{ padding:0px; font-weight:normal; font-size:20px; line-height:20px; }	 
-.leftside {float: left;} 
- ul.Posteddate li{ font-size: 12px; color: #7F7F7F; border-right: 1px solid #7F7F7F; padding:0px 5px ; line-height:13px;    }
-  ul.Posteddate li.first{ padding:0px 5px 0px 0px}
-  ul.Posteddate li.last{ border:none;}
-   ul.views li{ line-height:12px; color:#7F7F7F;}
-  ul.views li img{ float:left; margin-right:5px; }
-.Reports_text p{ line-height:18px; margin:6px 0px; }
-
-.download{ text-align:right;}
-.download ul li{ padding:3px;}
-.thumbnail{ text-align:right;}
-.thumbnail ul li{ padding:5px;}
-
-
-.content_right{ width:27%; float:right;}
-.content_right h4{  font-size:16px; font-weight:normal;}
-.content_right h5{  font-size:16px; font-weight:normal; margin:15px 0px;}
-.rightcard{ background:#fff; margin:15px 0px 0px 0px; box-shadow: -5px 4px 10px #2A6E9512; min-height:420px;}
-.cardpage { margin:0px 15px; overflow:hidden; border-bottom:1px solid #eee; padding:12px 0px; }
-.pagenoleft{ float:left; }
-.pagenoright{   margin-left:45px;}
-.pagenoright h6{ font-weight:normal; font-size:13px; line-height: 14px; }
-.pagenoright p{ font-size:11px; color:#7F7F7F}
-.Merge{ background:#F9F9F9; padding: 12px; text-align:center; box-shadow: -5px 4px 10px #2A6E9512;}
-.Merge h5{ margin:0px; padding:0px; }
-.Merge h5 a{ background:#0198DB; padding:6px 30px; font-size:12px; text-align:center; color:#fff; }	
-.events { background: #fff; overflow:hidden; box-shadow: -10px 4px 10px #2A6E9512;}
-.cardevent { padding: 10px; border-bottom: 1px solid #eee; overflow:hidden;}
-.eventsleft {float: left;}
-.eventsright { margin-left: 105px;}
-.eventsright h6{ font-weight:normal; font-size:13px; line-height: 14px; margin-bottom:6px; }
-.eventsright p{ font-size:11px; color:#989898}
-
+.overlay{display:none;position:fixed;width:100vw;height:100vh;background:rgba(0, 0, 0, 0.4);backdrop-filter:blur(7px);-webkit-backdrop-filter:blur(7px); -moz-backdrop-filter:blur(7px);z-index:998;opacity:0;transition:all 0.5s ease-in-out;}
+.overlay.active{display:block;opacity:1;}
+ #content{width:100%;min-height:100vh;transition:all 0.3s;position:absolute;top:0px;right:0;}
+.sidebar-header{background:#414141;overflow:hidden;height:48px;}
+.sidebar-header h3{color:#fff;margin:10px;font-weight:normal;font-size:18px}
+ul.list-unstyled{list-style:none;}
+ ul.list-unstyled li{display:block;color:#2A2A2A;padding:8px 15px;}
+ul.list-unstyled li.active{border-left:6px solid #158CD1;}
+ ul.list-unstyled li.active a{color:#158CD1; font-weight:600;}
+ 
+ .cardeventgrid{ width:175px; float:left; margin:0px 10px; padding:10px; background:#fff; overflow:hidden;}
+ 
+ .Mergedfilter ul li{ line-height: 14px;background:#fff; font-size:13px; padding:5px 8px 5px 8px;margin:2px;position:relative;box-shadow: 0px 5px 35px #00000008; border: 1px solid #CCC2B8;}
+ .Mergedfilter ul li img{ float:left; margin-right:5px;}
+.Mergedfilter ul li.one{background:none;border:none;padding:2px;}.Mergedfilter ul li.active{border:1px solid #3486ab;color:#3486ab;background:#ecf9ff;}
+.Mergedfilter ul li.active a{color:#3486ab;}
+.document{ background: #F6F6F6 0% 0% no-repeat; margin:20px 0px 0px 0px; font-size:18px;  box-shadow: 0px 1px 3px #00000030; padding:8px 20px;}
+ .document h5{ float:left; font-weight:normal; } 
+  .document p{ text-align:right;}
+  
+  .document p a{background:#0198DB;padding:5px 10px;font-size:12px;text-align:center;color:#fff;}
+  .pdf { box-shadow: -5px 4px 10px #8098D529;}
+  .pdf h5{ padding:15px 10px; font-size:15px; line-height:14px; font-weight:normal; }
+  .pdf h5 input{ float:left; margin-right:5px;}
+  .pdf h5 span{ margin-left:10px; border: 1px solid #333333; font-size:13px; border-radius: 4px;padding: 3px 10px; }
+  .checkbox{ float:left;}
+    .checkbox2{ float:left;}
+  .pdf  input[type=checkbox]{ background:#000}
+  .pdf ul li{ margin:10px; text-align:center;}
+  .pdf ul li label{ display:grid; background: #fbfbfb;}
+  .RecentMerged{ width:160px; padding:10px; margin:10px 0px;}
+  
+  .Preferences{ box-shadow: -5px 4px 10px #8098D529;  padding: 10px;    margin: 15px 0px;}
+   .Preferences ul li{ margin:10px; text-align:center;}
+   .Preferences ul li.active {color:#fff; background:#0198DB ;     padding: 2px 10px;}
+   .Preferences h5{ padding:15px 10px; font-weight:600; color:#000;  font-size:14px; line-height:14px;  }
+    .Preferences p{ padding:0px 10px; font-weight:normal; color:#8B8B8B;  font-size:14px; line-height:14px;  }
+  .all_flter select { background: #fff; border:1px solid #ccc;    padding:4px; margin:8px 0px 5px 0px;} 
+ 
 /* @Kishor CSS Ends */
 
 /* @navigation start*/
@@ -403,7 +440,7 @@ ul li{  list-style-type:none; display:inline-block;}
     position:relative;
 }
 .searchbar .searchCategory ul{
-    /* display:none; */
+    display:none;
 }
 .searchbar .searchCategory::before{
     content: "";
