--- a/css/style.css
+++ b/css/style.css
@@ -391,14 +391,21 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 /* @Kishor CSS Ends */
 
 /* @navigation start*/
-.navbar{padding:9px 5px;overflow: visible;}
-.navbar-brand{ float:left; padding:10px 15px 10px 10px; }
+.navbar{padding:9px 5px 0 5px;overflow: visible;}
+.navbar-brand{ float:left; padding:15px 15px 10px 10px; }
 .navbar-brand img, .menutoggle img{ display:block;}
 .menutoggle{padding-top:14px;}
 .navbar-brand{padding-top:15px;}
-.navbar-nav ul{margin-top:11px;}
-.navbar-nav ul li{float:left;}
-.navbar-nav ul li.home{float:left;margin-right:15px;}
+.navbar-nav{float:left;margin-top: 12px;}
+.navbar-nav ul{margin-top:0px;float:none;}
+.navbar-nav ul li{float:left;padding:0 3px 16px 3px;margin-right:15px;border-bottom:3px solid #fff;}
+.navbar-nav ul li:hover, .navbar-nav ul li.active{border-color: #0198DB;cursor:pointer;}
+.navbar-nav ul li a{padding-left:26px;padding-bottom:0px;}
+.navbar-nav ul li a:hover{padding-left:26px;padding-bottom:0px;}
+.navbar-nav ul li.home a{background: url('../images/home.png') 0 2px no-repeat transparent;}
+.navbar-nav ul li.home:hover a, .navbar-nav ul li.home.active a{background-image: url('../images/home_dark.png');color: #0198DB;border-bottom:none;}
+.navbar-nav ul li.myActivity a{float:left;background: url('../images/myactivity.png') 0 4px no-repeat transparent;}
+.navbar-nav ul li.myActivity:hover a, .navbar-nav ul li.myActivity.active a{background-image: url('../images/myactivitydark.png');color: #0198DB;border-bottom:none;}
 .profilename{margin-right: 18px;}
 .profilename p span:before{border-color: #a4afb7 #a4afb7 transparent transparent;top:27px;right:22px;}
 .profilename p{font-size: 11px;line-height: 13px;}
