--- a/css/style.css
+++ b/css/style.css
@@ -59,37 +59,37 @@ header, footer, nav, menu, section, aside, article, details, summary, address { 
 
 /* @group Default Element Styles */
 body { 
-    font:normal 16px/22px "calibri";
+    font:normal 16px/22px "CalibriRegular";
     color:#5d5d5d; 
     background-color:#fff;
     -webkit-font-smoothing: antialiased;
 }
 h1 {
-    font:normal 28px/32px "calibri";
+    font:normal 28px/32px "CalibriRegular";
     color: #181818;
     margin-bottom:5px;
 }
 h2 { 
-    font:normal 22px/26px "calibri";
+    font:normal 22px/26px "CalibriRegular";
     color: #333;
 }
 h3 { 
-    font:normal 18px/22px "calibri";
+    font:normal 18px/22px "CalibriRegular";
     color: #181818;
     margin-bottom:15px;
 }
 h4 { 
-    font:normal 16px/20px "calibri";
+    font:normal 16px/20px "CalibriRegular";
     color: #181818;
     margin-bottom:10px;
 }
 h5 { 
-    font:normal 14px/18px "calibri";
+    font:normal 14px/18px "CalibriRegular";
     color: #181818;
     margin-bottom:10px;
 }
 p {
-    font:normal 16px/22px "calibri";
+    font:normal 16px/22px "CalibriRegular";
     color:#00000099;
     margin-bottom:0;
 }
@@ -103,7 +103,7 @@ a:hover { text-decoration:none; color:#181818; }
 a:hover, a:active, a:focus { outline:0; }
 textarea {
     display: block;
-    font: normal 12px/15px "calibri";
+    font: normal 12px/15px "CalibriRegular";
     color: #333;
     padding:8px 10px;
     width: 165px;
@@ -237,7 +237,7 @@ textarea.itl  {
 .btnContainer button{
     width:125px;
     text-align:center;
-    font:normal 14px/19px calibri;
+    font:normal 14px/19px CalibriRegular;
     border:2px solid #B70000;
     border-radius:4px;
 	padding:10px 0;
@@ -278,9 +278,9 @@ img{ max-width:100%;}
 .clear{clear:both;}
 .bgwhite{  background:#fff;}
 .navbar{position:fixed;background:#fff;width:100%;z-index:9;padding:11px 5px 5px 5px;overflow:hidden;box-shadow:0px 1px 5px #00000033;}
-.menutoggle{float:left;padding:9px 15px;}
+.menutoggle{float:left;padding:9px 18px;}
 .navbar-brand{float:left;padding:10px 15px;}
-.navbar-nav ul{float:left;list-style-type:none;margin:7px 10px 0px 20px;}
+.navbar-nav ul{float:left;list-style-type:none;margin:0;}
 .navbar-nav ul li{list-style-type:none;display:inline-block;padding:0px 5px;}
 .navbar-nav ul li img{ padding:0px 5px; margin:0px 0px -3px 0px;}
 .navbar-nav ul li a{color:#7F7F7F;text-decoration:none;line-height:22px;font-size:15px; padding-bottom: 20px;}
@@ -297,54 +297,60 @@ img{ max-width:100%;}
  .profilename p{font-size:13px;line-height:15px;color:#979797;margin-top:4px;}
  .profilename p span{font-size:14px;font-weight:600;line-height:18px;color:#4D4F5C;}
  .profilename p span:before{content:"";position:absolute;top:30px;right:20px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#000 #000 transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
-.container{width:1024px;margin:0px auto;padding:15px 0px 0px 0px;}
+.container{width:1024px;margin:0px auto;padding:20px 0px 0px 0px;}
 #content{padding-top:60px;}
 .content_left{width:70%;float:left;}
-.content_left h2{padding:0px;font-size:24px;font-weight:normal;line-height:22px;}
-.content_left h4{padding:10px 0px;font-size:17px;font-weight:normal;}
-.breadcrumb ul{list-style-type:none;}
- .breadcrumb ul li{display:inline-block;margin-right:7px;font-size:12px;}
-.filter ul li{background:#fff;padding:2px 25px 0px 8px;margin:2px;position:relative;box-shadow:0px 5px 35px #00000008;border:1px solid #CBC1B6;}
+.content_left h2{padding:0px;font-size:24px;font-weight:normal;line-height:29px;}
+.content_left h4{padding:10px 0px;font:normal 15px/17px Arial;color:#000;margin-bottom:5px;}
+.breadcrumb{line-height: 13px;}
+.breadcrumb ul{list-style-type:none;line-height:13px;}
+ .breadcrumb ul li{display:inline-block;margin-right:7px;font-size:11px;line-height: 13px;}
+ .filter{padding-bottom:10px;}
+ .filter ul li{background:#fff;padding:1px 25px 1px 8px;margin-right:4px;position:relative;box-shadow:0px 5px 35px #00000008;border:1px solid #CBC1B6;float:left;}
 .filter ul li.one{background:none;border:none;padding:2px;}
- .filter ul li a:before{content:"";position:absolute;top:6px;right:8px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#000 #000 transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
-.filter ul li.active{border:1px solid #3486ab;color:#3486ab;background:#ecf9ff;}
-.filter ul li.active a{color:#3486ab;}
- .filter ul li.active a:before{content:"";position:absolute;top:6px;right:8px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#3486ab #3486ab transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
-.card-body{background:#fff;padding:15px;overflow:hidden;margin:15px 0px;box-shadow:-10px 5px 10px #8098D512;}
+ .filter ul li a{font:normal 13px/15px CalibriRegular;}
+ .filter ul li a:before{content:"";position:absolute;top:5px;right:8px;width:7px;height:7px;border-style:solid;border-width:1px;border-color:#000 #000 transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
+.filter ul li.active{border:1px solid #3486ab;color:#3486ab;background:#ecf9ff;line-height:20px;}
+.filter ul li.active a{color:#0198DB;font:normal 13px/15px CalibriRegular}
+ .filter ul li.active a:before{content:"";position:absolute;top:5px;right:8px;width:7px;height:7px;border-style:solid;border-width:1px;border-color:#0198DB #0198DB transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
+.card-body{background:#fff;padding:15px;overflow:hidden;margin:15px 0px;box-shadow:-10px 5px 10px #8098D512;position: relative}
 .Reports_img{width:170px;float:left;margin-right:10px;}
 .Reports_text{width:460px;float:left;}
-.Reports_text h4{padding:0px;font-weight:normal;font-size:20px;line-height:22px;}
+.Reports_text h4{padding:0px;font-weight:normal;font-size:20px;line-height:17px;font-family: CalibriRegular;margin-bottom:3px;}
  .leftside{float:left;}
+ .Reports_text ul.Posteddate{line-height: 13px;}
+ .Reports_text ul.view{line-height: 17px;}
  ul.Posteddate li{font-size:12px;color:#7F7F7F;border-right:1px solid #7F7F7F;padding:0px 5px;line-height:13px;}
   ul.Posteddate li span{ color:#158CD1;}
  ul.Posteddate li.first{padding:0px 5px 0px 0px}
  ul.Posteddate li.last{border:none;}
- ul.views li{line-height:12px;color:#7F7F7F;}
+ ul.views li{line-height:16px;color:#7F7F7F;font-size: 14px;margin-right:18px;}
    ul.views li span{ color:#158CD1;}
- ul.views li img{float:left;margin-right:5px;}
-.Reports_text p{line-height:18px;margin:6px 0px;}
+ ul.views li img{float:left;margin-right:5px;margin-top:2px;}
+.Reports_text p{font:normal 14px/16px CalibriRegular;margin:6px 0px;color:#2E2D29;}
 .download{text-align:right;}
 .download ul li{padding:3px;}
 .thumbnail{text-align:right;}
-.thumbnail ul li{padding:5px;}
+.thumbnail ul li{padding:7px 5px;}
 .content_right{width:27%;float:right;}
 .content_right h4{font-size:16px;font-weight:normal;}
-.content_right h5{font-size:16px;font-weight:normal;margin:15px 0px;}
+.content_right h5{font-size:16px;font-weight:normal;margin:15px 0px;line-height:19px;}
 .rightcard{background:#fff;margin:15px 0px 0px 0px;box-shadow:-5px 4px 10px #2A6E9512;min-height:420px;}
-.cardpage{margin:0px 15px;overflow:hidden;border-bottom:1px solid #eee;padding:12px 0px;}
+.cardpage{margin:0px 15px;overflow:hidden;border-bottom:1px solid #D6D6D6;;padding:15px 0px;}
 .pagenoleft{float:left;}
+.pagenoleft img{display: block;}
 .pagenoright{margin-left:45px;}
 .pagenoright h6{font-weight:normal;font-size:13px;line-height:14px;}
-.pagenoright p{font-size:11px;color:#7F7F7F}
+.pagenoright p{font-size:10px;color:#7F7F7F;line-height: 14px;}
 .Merge{background:#F9F9F9;padding:12px;text-align:center;box-shadow:-5px 4px 10px #2A6E9512;}
 .Merge h5{margin:0px;padding:0px;}
 .Merge h5 a{background:#0198DB;padding:6px 30px;font-size:12px;text-align:center;color:#fff;}
 .events{background:#fff;overflow:hidden;box-shadow:-10px 4px 10px #2A6E9512;}
-.cardevent{padding:10px;border-bottom:1px solid #eee;overflow:hidden;}
+.cardevent{padding:10px;border-bottom:1px solid #D6D6D6;;overflow:hidden;}
 .eventsleft{float:left;}
 .eventsright{margin-left:105px;}
-.eventsright h6{font-weight:normal;font-size:13px;line-height:14px;margin-bottom:6px;}
-.eventsright p{font-size:11px;color:#989898}
+.eventsright h6{font-weight:normal;font-size:13px;line-height:15px;margin-bottom:6px;}
+.eventsright p{font-size:10px;line-height:14px;color:#989898;}
  #sidebar{width:210px;position:fixed;top:0;left:-220px;height:100vh;z-index:999;background:#fff;color:#2A2A2A;transition:all 0.3s;overflow-y:scroll;box-shadow:3px 3px 3px rgba(0, 0, 0, 0.2);}
 #sidebar.active{left:0;}
 #dismiss{width:35px;height:35px;line-height:35px;text-align:center;position:absolute;top:10px;right:10px;cursor:pointer;-webkit-transition:all 0.3s;-o-transition:all 0.3s;transition:all 0.3s;}
@@ -392,15 +398,15 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 
 /* @navigation start*/
 .navbar{padding:9px 5px 0 5px;overflow: visible;}
-.navbar-brand{ float:left; padding:15px 15px 10px 10px; }
+.navbar-brand{ float:left; padding:14px 15px 10px 6px; }
 .navbar-brand img, .menutoggle img{ display:block;}
 .menutoggle{padding-top:14px;}
-.navbar-brand{padding-top:15px;}
-.navbar-nav{float:left;margin-top: 12px;}
-.navbar-nav ul{margin-top:0px;float:none;}
-.navbar-nav ul li{float:left;padding:0 3px 16px 3px;margin-right:15px;border-bottom:3px solid #fff;}
+
+.navbar-nav{float:left;margin-top: 12px;margin-left:29px;}
+.navbar-nav ul{float:none;}
+.navbar-nav ul li{float:left;padding:0 3px 16px 3px;margin-right:19px;border-bottom:3px solid #fff;}
 .navbar-nav ul li:hover, .navbar-nav ul li.active{border-color: #0198DB;cursor:pointer;}
-.navbar-nav ul li a{padding-left:26px;padding-bottom:0px;}
+.navbar-nav ul li a{padding-left:24px;padding-bottom:0px;}
 .navbar-nav ul li a:hover{padding-left:26px;padding-bottom:0px;}
 .navbar-nav ul li.home a{background: url('../images/home.png') 0 2px no-repeat transparent;}
 .navbar-nav ul li.home:hover a, .navbar-nav ul li.home.active a{background-image: url('../images/home_dark.png');color: #0198DB;border-bottom:none;}
@@ -413,9 +419,9 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .notification span{width:11px;height: 11px;top: -3px;right:13px;}
 .searchbar{
     width:620px;
-    border: none;
     border: 1px solid #CBC1B6;
     background-color: #fcfcfc;
+    margin-top:2px;
 }
 .searchbar select{
     border: none;
@@ -423,23 +429,22 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .searchbar button{
     float:right;
-    padding:10px 6px 10px 8px;
+    padding:9px 6px 7px 8px;
     border: none;
     background-color: transparent;
 }
 .searchbar input[type=text]{
-    font: normal 14px/17px Calibri;
+    font: normal 14px/17px CalibriRegular;
     letter-spacing: 0.35px;
     color: #7F7F7F;
     border:none;
-    padding: 12px;
+    padding: 10px 12px;
     width:65%;
 }
 .searchbar .searchCategory{
     float:left;
-    padding: 10px 29px 10px 8px;
+    padding: 10px 29px 7px 8px;
     background: transparent;
-    position: relative;
     border-right: 1px solid #CBC1B6;
 }
 .searchbar .searchCategory{
@@ -452,7 +457,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .searchbar .searchCategory::before{
     content: "";
     position: absolute;
-    top: 13px;
+    top: 12px;
     right: 11px;
     width: 8px;
     height: 8px;
@@ -466,7 +471,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .searchbar .searchCategory ul{
     position: absolute;
     width: 160px;
-    top:44px;
+    top:41px;
     left:-1px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 6px 15px #0000003D;
@@ -476,7 +481,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .searchbar .searchCategory ul li{
     display: block;
-    font: normal 13px/17px Calibri;
+    font: normal 13px/17px CalibriRegular;
     letter-spacing: 0;
     color: #2A2A2A;
     margin-bottom:5px;
@@ -495,16 +500,25 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .thumbnail li.active a{
     color:#2E2D29;
 }
+.thumbnail li:hover{
+    cursor:pointer;
+}
 .thumbnail li.showThumbnail a{
     width: 15px;
+    background: url('./../images/thumbnail.png');
+}
+.thumbnail li.showThumbnail:hover a, .thumbnail li.showThumbnail.active a{
     background: url('./../images/svg/thumbnail.svg');
 }
 .thumbnail li.showList a{
     width: 18px;
     background: url('./../images/svg/list.svg');
 }
+.thumbnail li.showList:hover a, .thumbnail li.showList.active a{
+    background: url('./../images/list.png');
+}
 .reportHeading{
-    font: normal 16px/19px Calibri;
+    font: normal 16px/19px CalibriRegular;
     color: #000000;
 }
 .Reports_data{display: none;}
@@ -571,14 +585,14 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .thumbnailView .download ul li:last-child{position:absolute;top:0;right:7px;font-size:13px;padding:0;line-height: 13px;}
 .thumbnailView .download ul li:last-child img{height: 13px;} */
 .thumbnailView .reportList .Reports_data{ display:block;margin-top: 5px;}
-.thumbnailView .reportList .Reports_data h4{font:normal 13px/14px "calibri";color:#000;padding:0;margin-bottom: 2px;}
+.thumbnailView .reportList .Reports_data h4{font:normal 13px/14px "CalibriRegular";color:#000;padding:0;margin-bottom: 2px;}
 .thumbnailView .reportList .Reports_data .postedBy,
 .thumbnailView .reportList .Reports_data .postedDate,
 .thumbnailView .reportList .Reports_data .readTime,
 .thumbnailView .reportList .Reports_data .comments,
 .thumbnailView .reportList .Reports_data .views
 {
-    font:normal 12px/16px "calibri";
+    font:normal 12px/16px "CalibriRegular";
     color:#7F7F7F;
 }
 .thumbnailView .reportList .Reports_data .postedDate{float:left;}
@@ -606,27 +620,36 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .article .Reports_img img{ display: block;width:205px;} 
 .article .card-body{
     padding: 20px 15px 20px 20px;
-    position:relative;
     margin-bottom:25px;
 }
-.article .card-body .download {
+.card-body .download {
     text-align: right;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 15px;
+    right: 15px;
     display: none;
 }
-.article .card-body:hover .download{
+.article .card-body .download {
+    top: 20px;
+    right: 20px;
+}
+.card-body:hover .download{
     display: block;
 }
-.article .card-body .download li{
+.card-body .download li{
+    float:left;
     height:15px;
+    width:15px;
     padding:0px;
     cursor: pointer;
 }
-.article .card-body .download .bookmark {
+.card-body .download .bookmark {
     margin-left: 20px;
 }
+.card-body .download .bookmark .bm{display: block;}
+.card-body .download .bookmark .bmdark{display: none;}
+.card-body .download .bookmark.active .bm{display: none;}
+.card-body .download .bookmark.active .bmdark{display: block;}
 
 .article .Reports_text{width:656px;}
 .article .Reports_text .articleTetWrapper{width:584px;}
@@ -639,12 +662,12 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .article ul.views li img{float:none;}
 .article ul.views li.last{margin-left:15px;}
 .article ul.views{margin-bottom:15px;}
-.article .card-body h6{font:bold 14px/16px "calibri";color:#000;}
-.article .card-body p{font:normal 14px/16px "calibri";color:#2E2D29;}
+.article .card-body h6{font:bold 14px/16px "CalibriRegular";color:#000;}
+.article .card-body p{font:normal 14px/16px "CalibriRegular";color:#2E2D29;}
 .article .card-body button.btn{
     background: #0198DB 0% 0% no-repeat padding-box;
     color:#fff;
-    font:normal 12px/14px "calibri";
+    font:normal 12px/14px "CalibriRegular";
     text-align: center;
     display: block;
     padding:6px 12px;
@@ -658,7 +681,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .article .card-body ul.extractedPages li strong{
     width:10%;
-    font:bold 14px/16px "calibri";
+    font:bold 14px/16px "CalibriRegular";
     color:#000;
 }
 .article .card-body ul.extractedPages li p{
@@ -670,7 +693,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .article .commentsSection{padding-top:18px;border-top:1px solid rgba(112, 112, 112, 0.4);}
 .article .commentsSection h5{
-    font:bold 16px/18px "calibri";
+    font:bold 16px/18px "CalibriRegular";
     color:#000;
     padding-left:20px;
     background: url('./../images/svg/sms.svg') no-repeat 0 4px transparent;
@@ -692,7 +715,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .article .commentsSection input.comment{
     color: #1DABE9;
-    font: normal 13px/13px Calibri;
+    font: normal 13px/13px CalibriRegular;
     background: #F5F6FA 0% 0% no-repeat padding-box;
     padding:7px 15px 8px;
 }
@@ -705,7 +728,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
     margin-top:2px;
 }
 .article .card-body .commentsSection p{
-    font: normal 12px/14px Calibri;
+    font: normal 12px/14px CalibriRegular;
     color: #43425D;
     margin:0 0 5px 0;
 }
@@ -715,13 +738,13 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .article .commentsSection .comment .commentAuthName{
     display:block;
-    font: Bold 13px/15px Calibri;
+    font: Bold 13px/15px CalibriRegular;
     color: #4D4F5C;
     margin-right:13px;
 }
 .article .commentsSection .comment .commentDate{
     display:block;
-    font: normal 11px/13px Calibri;
+    font: normal 11px/13px CalibriRegular;
     color: #9B9B9B;
 }
 .recommendationsList{
@@ -743,7 +766,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
     width:124px;
 }
 .recommendationsList .reportItem p{
-    font: normal 13px/14px Calibri;
+    font: normal 13px/14px CalibriRegular;
     color: #000000;
 }
 h4.sectionHeading{
@@ -753,7 +776,7 @@ h4.sectionHeading{
 }
 .recommendationsList .reportItem span{
     background: #E15462 0% 0% no-repeat padding-box;
-    font: normal 10px/16px Calibri;
+    font: normal 10px/16px CalibriRegular;
     color: #FFFFFF;
     position: absolute;
     left:0;
