home page finalised

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,8 @@ textarea.itl  {
 /* @end */
 /* @group common */
 .fLeft {float:left;}
+.pL30{padding-left:30px;}
+.mB5{margin-bottom:5px;}
 /* @end */
 
 /* layout */
@@ -297,15 +299,16 @@ img{ max-width:100%;}
  .profilename p{font-size:13px;line-height:15px;color:#979797;margin-top:4px;}
  .profilename p span{font-size:14px;font-weight:600;line-height:18px;color:#4D4F5C;}
  .profilename p span:before{content:"";position:absolute;top:30px;right:20px;width:8px;height:8px;border-style:solid;border-width:1px;border-color:#000 #000 transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
-.container{width:1024px;margin:0px auto;padding:20px 0px 0px 0px;}
+.container{width:1080px;margin:0px auto;padding:20px 0px 0px 0px;}
 #content{padding-top:60px;}
 .content_left{width:70%;float:left;}
 .content_left h2{padding:0px;font-size:24px;font-weight:normal;line-height:29px;}
+.content_left h3{padding:0px;font: normal 16px/26px CalibriRegular;margin-top: 0;margin-bottom: 0;}
 .content_left h4{padding:10px 0px;font:normal 15px/17px Arial;color:#000;margin-bottom:5px;}
 .breadcrumb{line-height: 13px;}
 .breadcrumb ul{list-style-type:none;line-height:13px;}
  .breadcrumb ul li{display:inline-block;margin-right:7px;font-size:11px;line-height: 13px;}
- .filter{padding-bottom:10px;}
+ .filter{padding-bottom:10px;margin-bottom:15px;}
  .filter ul li{background:#fff;padding:1px 25px 1px 8px;margin-right:4px;position:relative;box-shadow:0px 5px 35px #00000008;border:1px solid #CBC1B6;float:left;}
 .filter ul li.one{background:none;border:none;padding:2px;}
  .filter ul li a{font:normal 13px/15px CalibriRegular;}
@@ -313,7 +316,7 @@ img{ max-width:100%;}
 .filter ul li.active{border:1px solid #3486ab;color:#3486ab;background:#ecf9ff;line-height:20px;}
 .filter ul li.active a{color:#0198DB;font:normal 13px/15px CalibriRegular}
  .filter ul li.active a:before{content:"";position:absolute;top:5px;right:8px;width:7px;height:7px;border-style:solid;border-width:1px;border-color:#0198DB #0198DB transparent transparent;-webkit-transform:rotate(45deg);transform:rotate(135deg);-webkit-transition:all .25s ease;}
-.card-body{background:#fff;padding:15px;overflow:hidden;margin:15px 0px;box-shadow:-10px 5px 10px #8098D512;position: relative}
+.card-body{background:#fff;padding:15px;overflow:hidden;margin:0 0 15px 0px;box-shadow:-10px 5px 10px #8098D512;position: relative}
 .Reports_img{width:170px;float:left;margin-right:10px;}
 .Reports_text{width:460px;float:left;}
 .Reports_text h4{padding:0px;font-weight:normal;font-size:20px;line-height:17px;font-family: CalibriRegular;margin-bottom:3px;}
@@ -331,10 +334,12 @@ img{ max-width:100%;}
 .download{text-align:right;}
 .download ul li{padding:3px;}
 .thumbnail{text-align:right;}
-.thumbnail ul li{padding:7px 5px;}
+.thumbnail ul{float:right;}
+.thumbnail ul li{padding:7px 5px;float:left;margin-right:10px;}
+.thumbnail ul li:last-child{margin-right:0px;}
 .content_right{width:27%;float:right;}
 .content_right h4{font-size:16px;font-weight:normal;}
-.content_right h5{font-size:16px;font-weight:normal;margin:15px 0px;line-height:19px;}
+.content_right h5{font-size:16px;font-weight:normal;margin:0 0px 15px;line-height:19px;}
 .rightcard{background:#fff;margin:15px 0px 0px 0px;box-shadow:-5px 4px 10px #2A6E9512;min-height:420px;}
 .cardpage{margin:0px 15px;overflow:hidden;border-bottom:1px solid #D6D6D6;;padding:15px 0px;}
 .pagenoleft{float:left;}
@@ -342,7 +347,7 @@ img{ max-width:100%;}
 .pagenoright{margin-left:45px;}
 .pagenoright h6{font-weight:normal;font-size:13px;line-height:14px;}
 .pagenoright p{font-size:10px;color:#7F7F7F;line-height: 14px;}
-.Merge{background:#F9F9F9;padding:12px;text-align:center;box-shadow:-5px 4px 10px #2A6E9512;}
+.Merge{background:#F9F9F9;padding:12px;text-align:center;box-shadow:-5px 4px 10px #2A6E9512;margin-bottom:15px;}
 .Merge h5{margin:0px;padding:0px;}
 .Merge h5 a{background:#0198DB;padding:6px 30px;font-size:12px;text-align:center;color:#fff;}
 .events{background:#fff;overflow:hidden;box-shadow:-10px 4px 10px #2A6E9512;}
@@ -393,7 +398,7 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
    .Preferences ul li.active {color:#fff; background:#0198DB ;     padding: 2px 10px;}
    .Preferences h5{ padding:15px 10px; font-weight:600; color:#000;  font-size:14px; line-height:14px;  }
     .Preferences p{ padding:0px 10px; font-weight:normal; color:#8B8B8B;  font-size:14px; line-height:14px;  }
-    .all_flter {margin-top:8px;}
+    .all_flter {margin:8px 0 15px 0;}
     
   /* .all_flter select { background: #fff; border:1px solid #ccc;    padding:4px; margin:8px 0px 5px 0px;}  */
  
@@ -542,17 +547,18 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
     color: #000000;
 }
 .Reports_data{display: none;}
-.thumbnailView .reportListContainer{ 
+.reportListContainer{margin-bottom:35px;}
+.thumbnailView.reportListContainer{ 
     width:100%;
     overflow:hidden;
     position:relative;
 }
-.thumbnailView .reportListContainer::after{ 
+.thumbnailView.reportListContainer::after{ 
     display: block;
     content: '';
     background: transparent linear-gradient(90deg, #F2F2F200 0%, #F2F2F2 54%, #F2F2F2 100%) 0% 0% no-repeat padding-box;
     width: 100px;
-    height: 220px;
+    height: 100%;
     position: absolute;
     top: 0;
     right: -20px;
@@ -568,13 +574,13 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 }
 .thumbnailView a.arrowLeft{
     transform: rotate(180deg);
-    left:3px;
+    left:1px;
 }
 .thumbnailView a.arrowRight{
     right:3px;
 }
 
-.thumbnailView .reportListContainer .reportList{ 
+.thumbnailView.reportListContainer .reportList{ 
     width:10000px;
 }
 .thumbnailView .reportList .Reports_text{ 
@@ -585,6 +591,9 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
     float:left;
     margin:0 15px 0 0;
     position: relative;
+    padding-left:14px;
+    padding-right:13px;
+    box-shadow: -10px 4px 10px #8098D511;
 }
 .thumbnailView .reportList .card-body.last{ 
     margin-right:0;
@@ -666,10 +675,13 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
 .card-body .download .bookmark {
     margin-left: 20px;
 }
+.thumbnailView .card-body .download{top:0;right:4px;}
 .card-body .download .bookmark .bm{display: block;}
 .card-body .download .bookmark .bmdark{display: none;}
 .card-body .download .bookmark.active .bm{display: none;}
 .card-body .download .bookmark.active .bmdark{display: block;}
+
+
 
 .article .Reports_text{width:656px;}
 .article .Reports_text .articleTetWrapper{width:584px;}
