--- a/css/style.css
+++ b/css/style.css
@@ -394,12 +394,13 @@ ul.list-unstyled li.active{border-left:6px solid #158CD1;}
   .RecentMerged{ width:160px; padding:10px; margin:10px 0px;}
   
   .Preferences{ box-shadow: -5px 4px 10px #8098D529;  padding: 10px;    margin: 15px 0px;}
-   .Preferences ul li{ margin:10px; text-align:center;}
+   .Preferences ul li{ margin:10px; text-align:center;font-size: 14px;line-height: 17px;}
+   .Preferences ul li:first-child{padding-left:10px;}
    .Preferences ul li.active {color:#fff; background:#0198DB ;     padding: 2px 10px;}
-   .Preferences h5{ padding:15px 10px; font-weight:600; color:#000;  font-size:14px; line-height:14px;  }
-    .Preferences p{ padding:0px 10px; font-weight:normal; color:#8B8B8B;  font-size:14px; line-height:14px;  }
+   .Preferences h5{ padding:0 10px; font-weight:600; color:#000;  font-size:14px; line-height:16px;  margin-bottom:15px;}
+    .Preferences p{ padding:0px 10px; font-weight:normal; color:#8B8B8B;  font-size:14px; line-height:16px;  }
     .all_flter {margin:8px 0 15px 0;}
-    
+    .Preferences ul.level1{margin-bottom:20px;}
   /* .all_flter select { background: #fff; border:1px solid #ccc;    padding:4px; margin:8px 0px 5px 0px;}  */
  
 /* @Kishor CSS Ends */
